fjernet litt test-materiale

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<head> hello
+<head> 
     <script></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <style></style>
@@ -34,7 +34,7 @@
         <div class="col-3"></div>
 
     </div>
-hello
+
     <div class="row">
 
         <div class="col-12" style="background-color:blue; color:white">
