print preview mostly

--- a/printPage.htm
+++ b/printPage.htm
@@ -2,6 +2,7 @@
 <html lang="no">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <head> 
+    <title>TEGNINGER.NO</title>
     <script src="scripts.js">       
 
     </script>
@@ -34,7 +35,6 @@
     
 <div id="imgContainer">
 </div>
-
 
 </body>
 </html>
