--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <head> 
+    <title>TEGNINGER.NO</title>
     <script src="scripts.js">       
 
     </script>
