--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
             <div class="col-6">
                 
                 <a href="index.htm" class="logoText">TEGNINGER.NO</a>
+                <p>Gratis tegninger for fargelegging for store og små</p>
                 
             </div>
             <div class="col-6">
@@ -34,7 +35,6 @@
     </div>
 
     <div class="row"> 
-
 
         <div class="col-6">
             <div class="imgContainer">
@@ -56,7 +56,7 @@
         </div>
 
     </div>
-
+<!-- Adds -->
     <div class="row">
 
         <div class="col-12" style="background-color:blue; color:white">
@@ -66,6 +66,53 @@
             </br>
             </br>
             </br>
+        </div>
+
+    </div>
+<!-- images 2 row -->
+
+    <div class="row"> 
+
+        <div class="col-6">
+            <div class="imgContainer">
+
+                <div class="downloadImgCounterContainer">0</div>
+                <img id="v_img3.svg" src="v_img3.svg" class="downloadableImage">
+            </div>
+            </br>
+            <input type="button" value="Legg til print" class="downloadButton" onclick="AddToPrint('v_img3.svg', false);" />
+        </div>
+
+        <div class="col-6">
+            <div class="imgContainer">
+                <div class="downloadImgCounterContainer">0</div>
+                <img id="v_img4.svg" src="v_img4.svg" class="downloadableImage">
+            </div>
+            </br>
+            <input type="button" value="Legg til print" class="downloadButton"  onclick="AddToPrint('v_img4.svg', false);" />
+        </div>
+
+    </div>
+
+    <div class="row"> 
+
+        <div class="col-6">
+            <div class="imgContainer">
+
+                <div class="downloadImgCounterContainer">0</div>
+                <img id="v_img5.svg" src="v_img5.svg" class="downloadableImage">
+            </div>
+            </br>
+            <input type="button" value="Legg til print" class="downloadButton" onclick="AddToPrint('v_img5.svg', false);" />
+        </div>
+
+        <div class="col-6">
+            <div class="imgContainer">
+                <div class="downloadImgCounterContainer">0</div>
+                <img id="v_img6.svg" src="v_img6.svg" class="downloadableImage">
+            </div>
+            </br>
+            <input type="button" value="Legg til print" class="downloadButton"  onclick="AddToPrint('v_img6.svg', false);" />
         </div>
 
     </div>
