--- a/printPage.htm
+++ b/printPage.htm
@@ -13,10 +13,11 @@
 </head>
 <body onload="OnLoadPrintPage()">
 
-<div class="header">
+<div class="header non-printable">
     <div class="row">
         <div class="col-6">
-            <a href="index.htm" class="logoText">TEGNINGER.NO</a>            
+            <a href="index.htm" class="logoText">TEGNINGER.NO</a>        
+            <p>Gratis tegninger for fargelegging for store og små</p>    
         </div>
         <div class="col-6">
             <div id="printDialog" class="printDialog">
