--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,9 @@
 
 <head> 
     <title>TEGNINGER.NO</title>
-    <script src="scripts.js">       
+    <link rel="icon" type="image/png" href="pen_black_green_favicon.png">
 
-    </script>
+    <script src="scripts.js">    </script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <style></style>
