--- a/printPage.htm
+++ b/printPage.htm
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <head> 
     <title>TEGNINGER.NO</title>
+    <link rel="icon" type="image/png" href="pen_black_green_favicon.png">
     <script src="scripts.js">       
 
     </script>
