--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 
 <head> 
     <title>TEGNINGER.NO</title>
-    <link rel="icon" type="image/png" href="pen_black_green_favicon.png">
+    <link rel="icon" type="image/png" href="pen_black_green_favicon2.png">
 
     <script src="scripts.js">    </script>
     <link rel="stylesheet" type="text/css" href="styles.css">
