--- a/printPage.htm
+++ b/printPage.htm
@@ -17,7 +17,7 @@
 <div class="header non-printable">
     <div class="row">
         <div class="col-6">
-            <a href="index.htm" class="logoText">TEGNINGER.NO</a>        
+            <a href="index.htm" class="logoText">TEGNINGER.NO</a><span style="color:red"> BETA</span>        
             <p>Gratis tegninger for fargelegging for store og små</p>    
         </div>
         <div class="col-6">
