style på filter

--- a/index.htm
+++ b/index.htm
@@ -67,7 +67,7 @@
             <br/>
         </div>
         <div class='col-2'>
-            <input type="button" onclick="OnChangeFilter()" value="Vis filter">
+            <input type="button" class="downloadNowButton" onclick="OnChangeFilter()" value="Bruk filter">
         </div>
     </div>
 
