--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,15 @@
     <div id="content">
     </div>
 
-by Andreas
+    <div class="row">
+        <div class="col-12" style="text-align:center; width:100%">
+            <input type="button" class="loadMoreButton" value="Last flere bilder" onclick="LoadMore()">
+        </div>
+    </div>
+
+    <p style="font-size:xx-small">
+        made by some person on the internet
+    </p>
 </body>
 
 </html>
